--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
@@ -32,8 +33,10 @@
               "src/assets/css/nucleo-svg.css",
               "src/assets/css/nucleo-svg.css",
               "src/assets/css/soft-ui-dashboard.css"
+
             ],
             "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
               "src/assets/js/core/popper.min.js",
               "src/assets/js/core/bootstrap.min.js",
               "src/assets/js/plugins/perfect-scrollbar.min.js",
